# tauri-transcriber

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
electron/: main.cjs  preload.cjs
public/iconfont/: iconfont.js
python-backend/: diagnose.py  diagnose_vad.py  requirements.txt  server.py  test_hello.py  test_transcription.py  test_websocket.py
sidecar-wasapi/: Cargo.toml
sidecar-wasapi/src/: main.rs
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: app.json
src-tauri/src/: main.rs
src/components/: ConfirmDialog.vue  FloatingBubble.vue  LiquidGlassUI.vue  VirtualDeviceWizard.vue
src/composables/: useRecordingTimer.ts  useTranscriptionTimer.ts
src/stores/: audioStore.ts
src/types/: electron-api.d.ts
src/utils/: audioCapture.ts
src/views/: BubbleWindow.vue  MainWindow.vue
src/worklets/: pcm-processor.js
